Switch immutable collections from Google to Java
Simplifies API in a few spots, and should be slightly more efficient if nothing else due to the pre-allocation ability for lists
Keeping them in a few places where they are relevant for datagen though