@@ -1,6 +1,5 @@
 package slimeknights.mantle.client.book.data.content;
 
-import com.google.common.collect.ImmutableList;
 import lombok.Getter;
 import net.minecraft.client.Minecraft;
 import net.minecraft.core.NonNullList;
@@ -26,6 +25,7 @@ import slimeknights.mantle.client.screen.book.element.TextElement;
 import slimeknights.mantle.client.screen.book.element.TooltipElement;
 
 import java.util.ArrayList;
+import java.util.List;
 
 import static slimeknights.mantle.client.screen.book.Textures.TEX_SMELTING;
 
@@ -68,7 +68,7 @@ public class ContentSmelting extends PageContent {
     }
 
     list.add(new ImageElement(x, y, IMG_SMELTING.width, IMG_SMELTING.height, IMG_SMELTING, book.appearance.slotColor));
-    list.add(new TooltipElement(ImmutableList.of(Component.translatable("mantle:tooltip.cooktime", this.cookTime / 20)), x + 7, y + 42, 60, 28));
+    list.add(new TooltipElement(List.of(Component.translatable("mantle:tooltip.cooktime", this.cookTime / 20)), x + 7, y + 42, 60, 28));
 
     if (this.input != null && !this.input.getItems().isEmpty()) {
       list.add(new ItemElement(x + INPUT_X, y + INPUT_Y, ITEM_SCALE, this.input.getItems(), this.input.action));
