@@ -1,8 +1,6 @@
 package slimeknights.mantle.util;
 
 import com.google.common.collect.AbstractIterator;
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableMultiset;
 import com.google.common.collect.Multimap;
 import com.google.common.collect.Multiset;
@@ -16,6 +14,7 @@ import java.util.AbstractCollection;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Iterator;
+import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Set;
@@ -102,7 +101,7 @@ public class SingleKeyMultimap<K,V> implements Multimap<K,V> {
 
   @Override
   public Collection<V> removeAll(@Nullable Object key) {
-    Collection<V> values = ImmutableList.copyOf(this.values);
+    Collection<V> values = List.copyOf(this.values);
     this.values.clear();
     return values;
   }
@@ -167,7 +166,7 @@ public class SingleKeyMultimap<K,V> implements Multimap<K,V> {
   @Override
   public Map<K,Collection<V>> asMap() {
     if (asMap == null) {
-      asMap = ImmutableMap.of(key, values);
+      asMap = Map.of(key, values);
     }
     return asMap;
   }
